<resources>
    <string name="app_name">WorkS2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario 1</string>
    <string name="nav_header_subtitle">usuario1@WorkS.cl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">PERFIL</string>
    <string name="menu_gallery">SOLICITUDES</string>
    <string name="menu_slideshow">PAGO</string>
    <string name="menu_tools">CONFIGURACIÓN</string>
    <string name="menu_share">AYUDA</string>
    <string name="menu_volver">VOLVER A MENU</string>
    <string name="menu_send">Send</string>
    <string name="error_campo_username">Verifique Username</string>
    <string name="error_campo_password">Verifique Contraseña</string>
    <string name="error_email">Verifique eMail</string>
    <string name="bienvenida">Te damos la bienvenida a WorkS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
