<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_solicitudes"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_pago"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_configuracion"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_ayuda"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_volvermenu"
            android:title="@string/menu_volver" />
    </group>

</menu>
